package pl.slvd.university.people;

public class Professor {
}
